crates/compiler/codegen/tests/snapshots/mdtest_snapshots__mdtest_codegen_snapshots@01-basics__03-primitive-types__primitive_types_in_cairo_m___u32_type-3.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Primitive Types in Cairo-M - U32 Type"
input_file: mdtest/01-basics/03-primitive-types.md
---
Test: Primitive Types in Cairo-M - U32 Type
File: /Users/msaug/kkrt-labs/cairo-m/mdtest/01-basics/03-primitive-types.md
============================================================
Source:
fn test_u32_sub() -> u32 {
    let x: u32 = 4294967295;
    let y: u32 = 10;
    return x - y;
}
============================================================
Generated CASM:
test_u32_sub:
test_u32_sub:
test_u32_sub_0:
   0: 23 65535 65535 0     // [fp + 0, fp + 0 + 1] = u32(4294967295)
   1: 23 10 0 2            // [fp + 2, fp + 2 + 1] = u32(10)
   2: 16 0 2 4             // u32([fp + 4], [fp + 4 + 1]) = u32([fp + 0], [fp + 0 + 1]) op u32([fp + 2], [fp + 2 + 1])
   3: 4 4 0 -4             // Return value 0 slot 0: [fp -4] = [fp + 4] + 0
   4: 4 5 0 -3             // Return value 0 slot 1: [fp -3] = [fp + 5] + 0
   5: 11 _ _ _             // return
